welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:1: error: Missing closing brace `}' assumed here
def in1To10(n:Int, outsideMode:Boolean):Boolean = {
^